--- a/openCV1/openCV1.vcxproj
+++ b/openCV1/openCV1.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="bot.cpp" />
     <ClCompile Include="functions.cpp" />
     <ClCompile Include="gameInteraction.cpp" />
     <ClCompile Include="gameWindow.cpp" />
@@ -147,6 +148,7 @@
     <ClCompile Include="winInteraction.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="bot.h" />
     <ClInclude Include="functions.h" />
     <ClInclude Include="gameInteraction.h" />
     <ClInclude Include="gameWindow.h" />
